# data-interchange-web

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.ps1  build.yaml  build.zsh  compose.yaml  configuration-schema.yaml  data-interchange.Dockerfile  data_interchange.Dockerfile  go.mod  go.sum  pubspec.yaml  server-configuration.yaml  serverice-configuration.yaml  skaffold.yaml
.cargo/: config.toml
.fleet/: run.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: dart.yml  go.yml  rust.yml
docker/: build.bash  build.ps1  build.sh  build.zsh
documentation/: configuration-schema.yaml
knative/eventing/: event-display.yaml  eventing.yaml  heartbeats.yaml  recordevents.yaml  websocket-source.yaml
knative/serving/: serving-storage-version-migration.yaml
kubernetes/: greptime-initializer-deployment.yaml  greptime-initializer-service.yaml  greptime-operator-deployment.yaml  greptime-operator-service.yaml  greptime-time-series-deployment.yaml  greptime-time-series-service.yaml  knative-cli-deployment.yaml  knative-cli-service.yaml  knative-functions-deployment.yaml  knative-functions-service.yaml  minio-control-deployment.yaml  minio-control-service.yaml  minio-operator-deployment.yaml  minio-operator-service.yaml  minio-storage-deployment.yaml  minio-storage-service.yaml  opentelemetry-collector-deployment.yaml  opentelemetry-collector-service.yaml  spice-authorization-deployment.yaml  spice-authorization-service.yaml  spice-operator-deployment.yaml  spice-operator-service.yaml  spice-zed-deployment.yaml  spice-zed-service.yaml  surreal-graph-deployment.yaml  surreal-graph-service.yaml  web-service-deployment.yaml  web-service-service.yaml
lib/: create_attributes.dart  create_elements.dart  create_global_attributes.dart  css_object_model.dart  document_object_model.dart  html_attributes.dart  html_elements.dart  html_global_attributes.dart  index.html  main.dart  query_elements.dart  queryful_elements.dart
lib/markup/: accordian.html  alert-dialogue.html  alert.html  breadcrumb.html  button.html  carousel.html  checkbox.html  radio-group.html  tabs.html
lib/math/: absolute_value.dart  average.dart  exponent.dart
lib/physics/: motion.dart
lib/styles/: alert-dialogue.css  carousel.css  menu-button.css  meter.css  radio-group.css  switch.css
server/: .gitignore  build.zig  build.zig.zon  go.mod
server/source/: main.go  main.zig
shell/: build.bash  build.ps1  build.sh  build.zsh  docker.bash  docker.ps1  rust.bash  rust.ps1  rust.yml  rust.zsh
source/: index.html  main.go  main.js
source/command/: argument_parser.go  argument_tokenizer.go  commands.go  flags.go  (+1 more)
src/: main.rs
web/: jsconfig.json  tsconfig.json
(+52 files in other folders)
