[package]
name = "data-interchange-server"
version = "0.2.0"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
argfile = "0.2.1"
futures = "0.3.31"
h2 = "0.4.7"
http = "1.2.0"
log = "0.4.25"
minio = "0.1.0"
opentelemetry = "0.28.0"
opentelemetry-appender-log = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
opentelemetry-contrib = "0.20.0"
opentelemetry-http = "0.28.0"
opentelemetry-otlp = "0.28.0"
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = "0.28.0"
proc-exit = "2.0.2"
s2n-quic = "1.53.0"
serde_json = "1.0.138"
socket2 = "0.5.8"
surrealdb = "2.2.0"
