[package]
authors = ["Hyaena Technologies", "Abdhilahi R. Wabwire"]
description = "Data Inerchange Web Server"
edition = "2021"
license = "BSD-3-Clause"
license-file = "LICENSE"
name = "data-interchange-web"
publish = false
repository = "https://github.com/HyaenaTechnologies/data-interchange"
rust-version = "1.84.1"
readme = "README.md"
version = "0.2.0"

[dependencies]
anstyle = "1.0.10"
argfile = "0.2.1"
config = "0.15.8"
confy = "0.6.1"
futures = "0.3.31"
hyper = "1.6.0"
hyper-util = "0.1.10"
log = "0.4.25"
minio = "0.1.0"
opentelemetry = "0.28.0"
opentelemetry-appender-log = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
opentelemetry-contrib = "0.20.0"
opentelemetry-http = "0.28.0"
opentelemetry-otlp = "0.28.0"
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = "0.28.0"
proc-exit = "2.0.2"
rexpect = "0.6.0"
serde_json = "1.0.138"
surrealdb = "2.2.0"
termtree = "0.5.1"

[dev-dependencies]
regex = "1.11.1"
s2n-quic = "1.53.0"
